cutting off font on safari fix

--- a/app/design/frontend/peterjacksons/petertheme/web/css/modules/cms/_home.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/modules/cms/_home.scss
@@ -217,6 +217,16 @@ button:hover {
         color: white;
         text-transform: uppercase;
         margin: 0 0 10px 0;
+
+        p {
+            margin: 0;
+        }
+
+        .your-style {
+            display: flex;
+            justify-content: space-between;
+            max-width: 285px;
+        }
     }
 
     &__text-box {
@@ -640,17 +650,14 @@ button:hover {
 
             .elevate {
                 font-size: 35px;
-                margin: 0;
             }
 
             .your {
                 font-size: 25px;
-                margin: 0;
             }
 
             .style {
                 font-size: 40px;
-                margin: 0;
             }
         }
 
